Fix static files and assets paths

--- a/public/admin.html
+++ b/public/admin.html
@@ -16,7 +16,7 @@
 
   <!-- Navbar -->
   <nav class="navbar">
-    <img src="../assets/imgs/logo.png" alt="OraDesign Logo" class="logo">
+    <img src="logo.png" alt="OraDesign Logo" class="logo">
     <h1>لوحة إدارة الطلبات</h1>
     <div class="navbar-buttons">
       <button type="button" id="showProductsBtn"><i class="fa-solid fa-boxes"></i> عرض كل المنتجات</button>
