--- a/public/admin.html
+++ b/public/admin.html
@@ -16,14 +16,24 @@
 
   <!-- Navbar -->
   <nav class="navbar">
+    <!-- ملخص الأرباح والخسائر -->
+<div class="totals-bar">
+  <span>💰 إجمالي الربح: <strong id="ordersTotal">0</strong> جنيه</span>
+  <span>🧰 تكلفة الأدوات: <strong id="toolsTotal">0</strong> جنيه</span>
+  <span>💸 الخسائر: <strong id="lossesTotal">0</strong> جنيه</span>
+  <span>📊 الربح النهائي: <strong id="finalProfit">0</strong> جنيه</span>
+</div>
+
+
     <img src="logo.png" alt="OraDesign Logo" class="logo">
     <h1>لوحة إدارة الطلبات</h1>
     <div class="navbar-buttons">
       <button type="button" id="showProductsBtn"><i class="fa-solid fa-boxes"></i> عرض كل المنتجات</button>
       <button type="button" id="showOrdersBtn"><i class="fa-solid fa-list-check"></i> عرض كل الأوردرات</button>
       <button id="toolsBtn" onclick="openToolsPopup()" class="nav-btn">
-    🛠 Tools
+    <i class="fa-solid fa-scissors"></i> الأدوات
   </button>
+  <button id="lossesNavBtn" class="nav-btn"><i class="fa-solid fa-sack-dollar"></i>الخسائر</button>
       <button id="exportOrdersBtn">تصدير الأوردرات CSV</button>
 
     </div>
@@ -260,7 +270,57 @@
     
   </div>
 </div>
+<!-- Popup الخسائر -->
+<div id="lossesPopup" class="popup" style="display: none;">
+  <div class="popup-content" style="width: 400px; text-align: right;">
+    <h2 style="margin-bottom: 15px; text-align: center;">إدارة الخسائر</h2>
 
+    <div style="margin-bottom: 10px;">
+      <label for="lossName">اسم الخسارة:</label>
+      <input
+        type="text"
+        id="lossName"
+        placeholder="مثلاً: تلف منتج"
+        style="width: 100%; margin-top: 5px; padding: 5px;"
+      />
+    </div>
+
+    <div style="margin-bottom: 10px;">
+      <label for="lossPrice">قيمة الخسارة (جنيه):</label>
+      <input
+        type="number"
+        id="lossPrice"
+        placeholder="0"
+        style="width: 100%; margin-top: 5px; padding: 5px;"
+      />
+    </div>
+
+    <div style="display: flex; justify-content: space-between; margin-bottom: 15px;">
+      <button id="addLossBtn" class="btn" style="background: #d9534f; color: white;">
+        ➕ إضافة الخسارة
+      </button>
+      <button id="closeLossesBtn" class="btn" style="background: gray; color: white;">
+        ×
+      </button>
+    </div>
+
+    <h3 style="margin-top: 10px; text-align: center;">قائمة الخسائر</h3>
+    <table id="lossesTable" style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+      <thead>
+        <tr style="background: #f5f5f5;">
+          <th style="border: 1px solid #ccc; padding: 5px;">الاسم</th>
+          <th style="border: 1px solid #ccc; padding: 5px;">القيمة</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h4 style="margin-top: 15px; text-align: center;">
+      💰 إجمالي الخسائر:
+      <span id="lossesTotal" style="font-weight: bold; color: #d9534f;">0</span> جنيه
+    </h4>
+  </div>
+</div>
 
 
   <script src="admin.js"></script>
