--- a/public/admin.html
+++ b/public/admin.html
@@ -45,59 +45,56 @@
   </div>
 
   <!-- إضافة طلب جديد -->
-  <h2><i class="fa-solid fa-user-plus"></i> إضافة طلب جديد</h2>
-  <form id="orderForm">
-    <label>اسم العميل</label>
-    <input type="text" id="customerName" required>
+<h2><i class="fa-solid fa-user-plus"></i> إضافة طلب جديد</h2>
+<form id="orderForm">
+  <label>اسم العميل</label>
+  <input type="text" id="customerName" required>
 
-    <label>عنوان العميل</label>
-    <input type="text" id="address" required>
+  <label>عنوان العميل</label>
+  <input type="text" id="address" required>
 
-    <label>رقم التليفون</label>
-    <input type="text" id="phone" required>
+  <label>رقم التليفون</label>
+  <input type="text" id="phone" required>
 
-    <label>المشتريات</label>
-    <button type="button" id="selectProductsBtn">اختيار المشتريات</button>
-    <div id="productsList"></div>
-    <label>نوع الورق</label>
-<select id="paperType">
-  <option value="none">بدون طباعة</option>
-  <option value="coated">كوشيه</option>
-  <option value="sticker">استيكر</option>
-</select>
+  <label>المشتريات</label>
+  <button type="button" id="selectProductsBtn">اختيار المشتريات</button>
+  <div id="productsList"></div>
 
-<label>عدد الورق</label>
-<input type="number" id="paperCount" placeholder="عدد الورق">
-
-<label>سعر الورقة</label>
-<input type="number" id="paperPrice" placeholder="سعر الورقة">
-<!-- مثال: بعد اختيار المنتجات يظهر هذا input -->
-<label>تكلفة الورق للأوردر: <input type="number" id="orderPaperCost" value="0" min="0"></label>
-
-
-    <label>إجمالي التكلفة</label>
-    <input type="number" id="totalCost" step="0.01">
-
-    <label>سعر البيع النهائي</label>
-    <input type="number" id="sellingPrice" step="0.01">
-
-    <label>صافي الربح</label>
-    <input type="number" id="profit" step="0.01">
-
-
-    <label>تاريخ التسليم</label>
-    <input type="date" id="deliveryDate">
-
-    <label>الحالة</label>
-    <select id="status">
-      <option value="قيد التنفيذ">قيد التنفيذ</option>
-      <option value="تم التسليم">تم التسليم</option>
-    </select>
-
-    <div class="submit-container">
-      <button type="submit">إضافة الطلب</button>
+  <!-- ====== قسم الورق ====== -->
+  <div id="paperFormContainer">
+    <div class="paperRow">
+      <select name="paperType">
+        <option value="كوشيه">كوشيه</option>
+        <option value="ستيكر">ستيكر</option>
+      </select>
+      <input type="number" name="numberOfPapers" placeholder="عدد الأوراق">
+      <input type="number" name="paperCost" placeholder="تكلفة الورقة">
+      <button type="button" class="addPaperRow">+</button>
     </div>
-  </form>
+  </div>
+
+  <label>إجمالي التكلفة</label>
+  <input type="number" id="totalCost" step="0.01">
+
+  <label>سعر البيع النهائي</label>
+  <input type="number" id="sellingPrice" step="0.01">
+
+  <label>صافي الربح</label>
+  <input type="number" id="profit" step="0.01">
+
+  <label>تاريخ التسليم</label>
+  <input type="date" id="deliveryDate">
+
+  <label>الحالة</label>
+  <select id="status">
+    <option value="قيد التنفيذ">قيد التنفيذ</option>
+    <option value="تم التسليم">تم التسليم</option>
+  </select>
+
+  <div class="submit-container">
+    <button type="submit">إضافة الطلب</button>
+  </div>
+</form>
 
   <!-- Popup إضافة منتج -->
   <div id="addProductPopup" class="popup">
@@ -214,6 +211,7 @@
   <!-- ======== Popup تعديل الأوردر ======== -->
   <div id="editOrderPopup" class="popup" style="display:none;">
     <div class="popup-content">
+      <button id="cancelEditOrderBtn" class="close-btn">×</button>
       <h2>تعديل الأوردر</h2>
       <form id="editOrderForm">
         <label>اسم العميل</label>
@@ -233,6 +231,12 @@
           <option value="قيد التنفيذ">قيد التنفيذ</option>
           <option value="تم التسليم">تم التسليم</option>
         </select>
+        <!-- ===== قسم الورق داخل تعديل الأوردر ===== -->
+<h3>تفاصيل الورق</h3>
+<div id="editPaperContainer">
+  <!-- الصفوف هتتحمل هنا ديناميكياً من الجافاسكريبت -->
+</div>
+<button type="button" id="addEditPaperRowBtn" class="btn-secondary">+ إضافة ورقة</button>
 
         <div id="editProductsContainer"></div>
 
@@ -250,7 +254,6 @@
 
         <div class="popup-buttons">
           <button type="submit" class="btn-primary">حفظ التعديلات</button>
-          <button type="button" id="cancelEditOrder" class="btn-cancel">إلغاء</button>
         </div>
       </form>
     </div>
@@ -334,6 +337,14 @@
       💰 إجمالي الخسائر:
       <span id="lossesTotal" style="font-weight: bold; color: #d9534f;">0</span> جنيه
     </h4>
+  </div>
+</div>
+<!-- Popup Paper Details -->
+<div id="paperPopup" class="popup" style="display:none;">
+  <div class="popup-content">
+    <span id="closePaperPopup" class="close">&times;</span>
+    <h3>تفاصيل الورق</h3>
+    <div id="paperListContainer"></div> <!-- هنا هنعرض الورق اللي موجود -->
   </div>
 </div>
 
